# rom_comp_model

./: CMakeLists.txt  main.cpp
lib/rom/include/rom/: DEIM.h  DMD.h  GalerkinROM.h  POD.h  ReducedOrderModel.h
lib/rom/src/: DEIM.cpp  DMD.cpp  GalerkinROM.cpp  POD.cpp
navier2d_rom/: CMakeLists.txt  config.txt
navier2d_rom/src/: Config.cpp  Config.h  GalerkinROM.cpp  GalerkinROM.h  OfflineSolver2D.cpp  OfflineSolver2D.h  OnlineSolver2D.cpp  OnlineSolver2D.h  POD.cpp  POD.h  ReducedOrderModel.h  main.cpp
